
#+TITLE: Unidata Science Gateway News
#+DATE: {{{time(%Y-%m-%d %H:%M:%S %Z)}}}
#+AUTHOR: Julien Chastang
#+EMAIL: chastang at ucar dot edu
#+LANGUAGE: en
#+SELECT_TAGS: export
#+EXCLUDE_TAGS: noexport
#+CREATOR: Emacs 26.2 (Org mode 9.2.1)

#+HTML_LINK_HOME: https://science-gateway.unidata.ucar.edu/
#+RSS_IMAGE_URL: https://avatars2.githubusercontent.com/u/613345?s=200&amp;v=4

* 2/6/2020, Unidata Science Gateway in the News
  :PROPERTIES:
  :CUSTOM_ID: h-CB18704C
   :RSS_TITLE: 2/6/2020, Unidata Science Gateway in the News
   :PUBDATE: <2020-02-06 Thu>
   :RSS_PERMALINK: index.html#h-CB18704C
   :ID:       276FBC7F-5425-42AE-9DF5-8BEB7D6B0173
  :END:

From Indiana University IT News: [[https://itnews.iu.edu/articles/2020/The%20Unidata%20uses%20Jetstream%20to%20make%20geoscience%20data%20available%20to%20science%20community.php][Unidata uses Jetstream to make geoscience data available to science community]].

Also, we have a couple of publications forthcoming following the success of the Python Workshop at the AMS 2020 Student Conference.

* 10/30/2019, Python Workshop at the AMS 2020 Student Conference
  :PROPERTIES:
  :CUSTOM_ID: h-BD3E46F8
   :RSS_TITLE: 10/30/2019, Python Workshop at the AMS 2020 Student Conference
   :PUBDATE: <2019-10-30 Wed 16:28>
   :RSS_PERMALINK: index.html#h-BD3E46F8
   :ID:       2DD1E33B-8C59-4508-80DB-8EADB19E5716
  :END:

We are excited to announce Unidata will be hosting a Python Workshop at the [[https://annual.ametsoc.org/index.cfm/2020/programs/conferences-and-symposia/19th-annual-student-conference/][19th Annual Student Conference]] for the 2020 American Meteorological Society meeting in Boston, Massachusetts. The workshop will employ a JupyterHub running on the Unidata Science Gateway. Additional details will be forthcoming.

* 9/17/2019, 2019 Gateways and eScience Conferences
   :PROPERTIES:
   :CUSTOM_ID: h-7AC1E6CA
   :RSS_TITLE: 9/17/2019, 2019 Gateways and eScience Conferences